fixed overflowing text size

--- a/src/styles/elements.module.scss
+++ b/src/styles/elements.module.scss
@@ -241,6 +241,17 @@
   }
 }
 
+@media screen and (max-width: 400px) {
+  .card {
+    &__title {
+      font-size: 40px;
+    }
+    &__description {
+      font-size: 18px;
+    }
+  }
+}
+
 .arrow-btn {
   $btnDim: 50px;
   min-width: $btnDim;
@@ -281,6 +292,7 @@
     opacity: 0;
   }
 }
+
 .hs-wrapper {
   position: relative;
   min-height: fit-content;
